--- a/lesson_13/css/style.css
+++ b/lesson_13/css/style.css
@@ -13,6 +13,11 @@ body {
 	padding: 0 15px;
 }
 
+header, footer {
+	text-align: center;
+	padding-top: 50px;
+}
+
 .wrapper {
 	overflow: clip;
 	min-height: 100%;
